linkerd/check-linkerd-authorizationpolicy/.chainsaw-test/chainsaw-step-00-assert-1.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: authorizationpolicies.policy.linkerd.io
status:
  acceptedNames:
    kind: AuthorizationPolicy
    plural: authorizationpolicies
    singular: authorizationpolicy
  storedVersions:
  - v1alpha1
