linkerd/check-linkerd-authorizationpolicy/.chainsaw-test/chainsaw-step-00-assert-3.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: httproutes.policy.linkerd.io
status:
  acceptedNames:
    kind: HTTPRoute
    listKind: HTTPRouteList
    plural: httproutes
    singular: httproute
  storedVersions:
  - v1beta3
