linkerd/check-linkerd-authorizationpolicy/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: check-linkerd-authorizationpolicy
spec:
  steps:
  - name: step-00
    try:
    - assert:
        file: chainsaw-step-00-assert-1.yaml
    - assert:
        file: chainsaw-step-00-assert-2.yaml
    - assert:
        file: chainsaw-step-00-assert-3.yaml
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../check-linkerd-authorizationpolicy.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: server.yaml
    - apply:
        file: http-route.yaml
  - name: step-03
    try:
    - apply:
        file: good-authz.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-authz.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: check-linkerd-authorizationpolicy
